# archive-screencam-timelapse

electron/: .gitignore  index.html  main.js  package.json  preload.js  renderer.js
rust/: Cargo.toml
rust/src/: webcam.rs
